
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 APR 03b
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_dSe_dU_transport_Rodriguez2025(), commented out the electron heating contributions
      to the jacobian
      

2025 APR 03a
  * in model/thermo/_generic/electronimpact.c
    - in _EoverN_from_Te_chieminus_N2(), fixed a bug
  * in model/emfield/doc/Epotential/report.tex
    - made modifications to incorporate the contribution of A to the electric potential
  * in model/fluid/doc/Plasma_Model/report.tex
    - made modifications to incorporate the contribution of A to the electric potential
    

2025 APR 01a
  * renamed bin/cylinderinnerflow2D.wrp to bin/discinnerflow2D.wrp
  * in model/emfield/doc/Epotential/report.tex, added Maxwell equations and the magnetic field
    potential equations
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c, in find_Qe_Rodriguez2025() and 
    find_dSe_dU_transport_Rodriguez2025(), added impact of chie on EoverN
  * in model/thermo/_generic/electronimpact.c, added _EoverN_from_Te_chieminus_N2()
    and _EoverNk_from_Te_chieminus()
  * in src/data.c, in write_data_file_interpolation(), improved the error messages related to 
    dxlength being zero


2025 MAR 26a
  * in model/emfield/_Epotential-Bpotential/emfield.c
    - in write_bdry_emfield_template(), fixed a bug
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - at the beginning of _zetav() added zetav=0.0 to prevent a compilation error
  * in src/data.c
    - added function _dxlength2()
    - in write_data_file_interpolation(), calls  _dxlength2() and outputs an error should it be
      zero


2025 MAR 25a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - improved the TEMODEL_RODRIGUEZ2025 model