@@ -7,6 +7,17 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2025 APR 07a
+  * in lib/exm/exm.c
+    - in EXM_invert_matrix_analytical(), now outputs the matrix to the screen when it has a
+      determinant of 0.
+  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
+    - in find_Qe_Rodriguez2025() and find_dSe_dU_transport_Rodriguez2025(), implemented
+      latest version of the model
+  * in model/thermo/_generic/electronimpact.c
+    - in _EoverN_from_Te_chieminus_N2() took away a semicolon at the end of the function
+      
+
 2025 APR 03b
   * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
     - in find_dSe_dU_transport_Rodriguez2025(), commented out the electron heating contributions
